# mcp-agent-memory

./: .gitignore  .pre-commit-config.yaml  README.md  example_claude_code_config.json  pyproject.toml  requirements-dev.txt  run_basic_tests.py  shared_memory_mcp.py
.claude/: settings.local.json
archive/: PROJECT_SUMMARY.md  QUICKSTART.md  SHARED_MEMORY_README.md  START_HERE.md  demo_shared_memory.py  shared_memory_mcp_v1_backup.py
docs/: API_REFERENCE_V2.md  CHANGELOG_V2.md  IMPLEMENTATION_SUMMARY.md  UPGRADE_GUIDE.md
tests/: __init__.py  test_concurrency.py  test_memory_operations.py
utils/: __init__.py  file_lock.py  logger.py
